fix(ATE-39): Align task options icon

--- a/src/features/home/task-list.module.css
+++ b/src/features/home/task-list.module.css
@@ -9,6 +9,6 @@
 }
 
 .tasks > :last-child {
-  padding-bottom: var(--home-list-bottom-padding);
+  /* padding-bottom: var(--home-list-bottom-padding); */
   border-bottom: 0;
 }
